JumpScript/tests/baselines/reference/importNonExternalModule.errors.txt
tests/cases/conformance/externalModules/foo_1.jump(1,22): error TS2306: File 'tests/cases/conformance/externalModules/foo_0.jump' is not a module.


==== tests/cases/conformance/externalModules/foo_1.jump (1 errors) ====
    import foo = require("./foo_0");
                         ~~~~~~~~~
!!! error TS2306: File 'tests/cases/conformance/externalModules/foo_0.jump' is not a module.
    // Import should fail.  foo_0 not an external module
    if(foo.answer === 42){
    
    }
    
==== tests/cases/conformance/externalModules/foo_0.jump (0 errors) ====
    module foo {
    	export var answer = 42;
    }
    